Added comment reply model

--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -40,15 +40,8 @@
             Like({{likedCount}})  
         </a>
 
-        <a class="col card-link post-footer-btn text-center" (click)="toggleCommentInput()" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><i class="ti-comment-alt custom-size" style="    
-           
-            color: #272f46;"></i><span style="
-            color: #272f46;"> Comment({{commentsCount}}) </span> </a>
-
-        <a class="col card-link post-footer-btn text-center" href="javascript:void(0);"><i class="ti-share custom-size" style="  
-                        
-                        color: #272f46;"></i><span style="
-                        color: #272f46;">Share(0)</span></a>
+        <a class="col card-link post-footer-btn text-center" (click)="openCommentModel()" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><i class="ti-comment-alt custom-size" style="color: #272f46;"></i><span style="color: #272f46;"> Comment({{commentsCount}}) </span> </a>
+        <a class="col card-link post-footer-btn text-center" href="javascript:void(0);"><i class="ti-share custom-size" style="color: #272f46;"></i><span style="color: #272f46;">Share(0)</span></a>
         </div>
 </div>
 
