--- a/src/app/components/post/newpost/newpost.component.html
+++ b/src/app/components/post/newpost/newpost.component.html
@@ -117,8 +117,8 @@
 
         </div>
 
-        <div class="btn-toolbar justify-content-between padding-top2">
-            <div class="btn-group">
+        <!-- <div class="btn-toolbar justify-content-between padding-top2"> -->
+            <div class="btn-group post-btn">
                 <button type="submit" class="btn btn-xs btn-primary" (click)="submitPost()">Post</button>
             </div>
             <!--
@@ -144,6 +144,6 @@
             </div>
         -->
         </div>
-    </div>
+    <!-- </div> -->
 </div>
 <br/>
