--- a/src/styles.css
+++ b/src/styles.css
@@ -176,25 +176,30 @@ input{
     border-radius: .25rem !important;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
 }
-#postContent div{
+#postContent div, #replyContent div{
     display: inline;
+}
+#replyContent{
+    height: 100px;
+    overflow-y:auto;
 }
 
 .image-upload-container{
-    border: 1px solid #C1B6F2;
-    border-radius: 5px;
+    /* border: 1px solid #C1B6F2;
+    border-radius: 5px; */
     width:min-content;
   }
   .video-upload-container{
-    border: 1px solid #C1B6F2;
-    border-radius: 5px;
+    /* border: 1px solid #C1B6F2;
+    border-radius: 5px; */
     width:min-content;
   }  
 
   .delete-image{
+    margin-top: 5%;
     float: right;
     font-size: 30px;
-    color: #B61508;
+    color: black;
     border: none !important;
     background: none !important;
   }
@@ -444,3 +449,65 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     line-height: 2px !important;
     margin-left: 5px !important;
 }
+
+
+.attachments {
+    /* border: 1px solid #eee;
+    display: block;
+    padding: 10px; */
+    text-align: right;
+    border-top: 0;
+    background: #fff;
+  }
+  .reply-btn{
+    float: right;
+    margin-top: 1%;
+  }
+  .post-btn{
+    float: right;
+  }
+  .btn-primary:hover{
+      background-color: #265a88 !important;
+      background-position:unset !important;
+  }
+  
+  .close.mat-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 5px;
+    line-height: 14px;
+    min-width: auto;
+  }
+
+  .attachments > ul {
+    margin-top: 1%;
+    float: left;  
+    list-style: outside none none;
+    margin-bottom: 0;
+    padding-left: 0;
+  }
+  
+  .attachments li {
+    display: inline-block;
+    /* margin-left: 5px; */
+  }
+
+  .fileContainer [type=file], .fileContainer [type=checkbox] {
+    cursor: pointer;
+    display: block;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    position: absolute;
+    right: 0px;
+    text-align: right;
+    top: 0;
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .attachments .fileContainer [type="file"] {
+    right: 6px;
+    top: -18px;
+    width: 20px;
+  }
