--- a/src/app/components/post/postcard/postcard.component.css
+++ b/src/app/components/post/postcard/postcard.component.css
@@ -29,7 +29,10 @@ form button {
   padding: 3px 10px;
 }
 
-
+#comment{
+  border: none;
+  background-color: transparent;
+}
 
 .row-offcanvas {
   position: relative;
