--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -40,7 +40,9 @@
             Like({{likedCount}})  
         </a>
 
-        <a class="col card-link post-footer-btn text-center" (click)="openCommentModel()" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><i class="ti-comment-alt custom-size" style="color: #272f46;"></i><span style="color: #272f46;"> Comment({{commentsCount}}) </span> </a>
+        <!-- <a class="col card-link post-footer-btn text-center"  (click)="openCommentModel();" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><i class="ti-comment-alt custom-size" style="color: #272f46;"></i><span style="color: #272f46;"> Comment({{commentsCount}}) </span> </a> -->
+<!-- <span style="color: #272f46;" (click)="openCommentModel();"  id="comment"> <i class="ti-comment-alt custom-size" style="color: #272f46;"></i> Comment({{commentsCount}}) </span>  -->
+<button id="comment" (click)="openCommentModel();"><i class="ti-comment-alt custom-size" style="color: #272f46;"></i> Comment</button>
         <a class="col card-link post-footer-btn text-center" href="javascript:void(0);"><i class="ti-share custom-size" style="color: #272f46;"></i><span style="color: #272f46;">Share(0)</span></a>
         </div>
 </div>
