--- a/src/app/components/user/user/user.component.html
+++ b/src/app/components/user/user/user.component.html
@@ -176,6 +176,7 @@
 
               </div>
             </div>
+            <!--DESCRIPTION-->
             <div class="dashboard-avatar-text col-md-12">
                 <div class="bio-intro box" *ngIf="!isEditDesc && userData.description && userData.description.length>0">
                     <span  *ngIf="isProfileInEditMode()" class="edit-bio-intro edit" (click)="isEditDesc=true"><mat-icon>edit</mat-icon></span>
