--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -195,3 +195,125 @@
       </div>
   </div>
 </section>
+
+<!-- ============================ Footer Start ================================== -->
+<footer class="dark-footer skin-dark-footer">
+  <!--
+  <div class="container">
+    <div class="row">
+        
+        <div class="col-lg-3 col-md-3">
+          <div class="footer-widget">
+            <img src="assets/img/logo-white.png" class="img-footer" alt="">
+            <div class="footer-add">
+              <p>Collins Street West, Victoria,<br> Australia (AU4578).</p>
+              <p><strong>Email:</strong><br>hello@jobstock.com</p>
+              <p><strong>Call:</strong><br>91 855 742 62548</p>
+            </div>
+            
+          </div>
+        </div>		
+        <div class="col-lg-2 col-md-2">
+          <div class="footer-widget">
+            <h4 class="widget-title">Navigations</h4>
+            <ul class="footer-menu">
+              <li><a href="home-6.html">New Home Design</a></li>
+              <li><a href="browse-candidate-list.html">Browse Candidates</a></li>
+              <li><a href="browse-employer-list.html">Browse Employers</a></li>
+              <li><a href="advance-search-2.html">Advance Search</a></li>
+              <li><a href="checkout.html">Job With Map</a></li>
+            </ul>
+          </div>
+        </div>
+            
+        <div class="col-lg-2 col-md-2">
+          <div class="footer-widget">
+            <h4 class="widget-title">The Highlights</h4>
+            <ul class="footer-menu">
+              <li><a href="index-2.html">Home Page 2</a></li>
+              <li><a href="index-3.html">Home Page 3</a></li>
+              <li><a href="index-4.html">Home Page 4</a></li>
+              <li><a href="index-5.html">Home Page 5</a></li>
+              <li><a href="login.html">LogIn</a></li>
+            </ul>
+          </div>
+        </div>
+        
+        <div class="col-lg-2 col-md-2">
+          <div class="footer-widget">
+            <h4 class="widget-title">My Account</h4>
+            <ul class="footer-menu">
+              <li><a href="candidate-dashboard.html">Dashboard</a></li>
+              <li><a href="applications.html">Applications</a></li>
+              <li><a href="packages.html">Packages</a></li>
+              <li><a href="candidate-resume.html">resume.html</a></li>
+              <li><a href="register.html">SignUp Page</a></li>
+            </ul>
+          </div>
+        </div>
+        
+        <div class="col-lg-3 col-md-3">
+          <div class="footer-widget">
+            <h4 class="widget-title">Download Apps</h4>
+            <a href="#" class="other-store-link">
+              <div class="other-store-app">
+                <div class="os-app-icon">
+                  <i class="ti-android theme-cl"></i>
+                </div>
+                <div class="os-app-caps">
+                  Google Play
+                  <span>Get It Now</span>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="other-store-link">
+              <div class="other-store-app">
+                <div class="os-app-icon">
+                  <i class="ti-apple theme-cl"></i>
+                </div>
+                <div class="os-app-caps">
+                  App Store
+                  <span>Now it Available</span>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        
+      </div>
+      
+  </div>
+-->
+  <div class="footer-bottom">
+    <div class="container">
+      <div class="row align-items-center">
+        
+        <div class="col-sm-3">
+          <p class="mb-0">© 2022 GoPolitix. All Rights Reserved</p>
+        </div>
+        <div class="col-sm-3">
+          <!--<p class="mb-0">Privacy policy</p>-->
+          <a href="/privacy">Privacy Policy</a>
+        </div>
+        <div class="col-sm-3">
+          <!--<p class="mb-0">Privacy policy</p>-->
+          <a href="/terms">Terms</a>
+        </div>
+        <div class="col-sm-3">
+          <a href="https://www.linkedin.com/company/gopolitix/"><i class="ti-linkedin"></i></a>
+          <!--
+          <ul class="footer-bottom-social">
+           
+            <li><a href="#"><i class="ti-facebook"></i></a></li>
+            <li><a href="#"><i class="ti-twitter"></i></a></li>
+            <li><a href="#"><i class="ti-instagram"></i></a></li>
+           
+            <li><a href="https://www.linkedin.com/company/gopolitix/"><i class="ti-linkedin"></i></a></li>
+          </ul>
+          -->
+        </div>
+        
+      </div>
+    </div>
+  </div>
+</footer>
